[package]
name = "http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["compression-full", "cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
uuid = { version = "1.21.0", features = ["v4"] }
