[package]
name = "http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
opentelemetry = { version = "0.21.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.14.0", features = [
  "tonic",
  "metrics",
  "logs",
] }
opentelemetry-semantic-conventions = { version = "0.13.0" }
opentelemetry-http = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = [
  "compression-full",
  "cors",
  "fs",
  "trace",
] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
uuid = { version = "1.21.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa = "4.2.0"
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
